"Commit to share tasks"

--- a/login.html
+++ b/login.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>MyoungCar</title>
 </head>
 <body>
-    <h1> MyoungCar</h1>
+    <!-- 
+        loing 예제 이미지를 참고하시면 될 거 같습니다.
+        로그인 페이지에는 아이디와 비밀번호 입력창이 있고, 입력창은 하나의 div안에 있으면 좋겠습니다!
+        로그인 버튼이 입력창 아래에 있고
+        버튼 아래에는 회원가입 비밀 번호 찾기 하이퍼 링크가 있으면 될거 같습니다.
+        우선 하이퍼링크는 설정 안하셔도 될거같습니다.
+    -->
     
 </body>
 </html>
