--- a/main.html
+++ b/main.html
@@ -7,10 +7,29 @@
     <title>MyoungCar</title>
 </head>
 <body>
-    <div>
+    <div class="main_title">
         <h1>MyoungCar</h1>
-        <h1>HI</h1>
-        <a>!!!!!</a>
+        <h2>Find.</h2>
+        <h2>Your.</h2>
+        <h2>CAR Mate.</h2>
+        <h2>TeamProject 2</h2>
+        <h2>By Team One</h2>
+    </div>
+    <div class="board_wrap">
+        <div class="board_top">
+            <div class="top_select">
+
+            </div>
+            <div class="top_time">
+
+            </div>
+        </div>
+        <div class="board_list">
+
+        </div>
+        <div class="board_page">
+
+        </div>
     </div>
 </body> 
 </html>
