feat: Add signup page

--- a/signup.html
+++ b/signup.html
@@ -4,7 +4,81 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sign Up</title>
+	<style>
+		#signup-container {
+			position: fixed;
+			top: 50%;
+			left: 50%;
+			transform: translate(-50%, -50%);
+			background-color: rgba(255, 255, 255, 0.9);
+			padding: 30px;
+			border-radius: 10px;
+			box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			width: 650px;
+			height: 600px;
+		}
+		#signup-container h1 {
+			font-size: 32px;
+			font-weight: bold;
+			margin-top: 0;
+			margin-bottom: 20px;
+			text-align: center;
+		}
+		#signup-container h2 {
+			font-size: 18px;
+			margin-top: 0;
+			margin-bottom: 20px;
+			text-align: center;
+		}
+		form {
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			width: 100%;
+			margin-bottom: 20px;
+		}
+		input[type=text] {
+			width: 80%;
+			padding: 10px;
+			border: 1px solid #ccc;
+			border-radius: 4px;
+			margin-top: 10px;
+			margin-bottom: 10px;
+			box-sizing: border-box;
+		}
+		button {
+			background-color: black;
+			color: white;
+			padding: 10px 10px;
+			border: none;
+			border-radius: 4px;
+			cursor: pointer;
+			font-size: 16px;
+			margin-bottom: 10px;
+		}
+		button:hover {
+			background-color: #555;
+		}
+		#verification-container {
+			display: flex;
+			align-items: center;
+			margin-top: 10px;
+			width: 80%;
+		}
+		#verification-container input[type=text] {
+			flex-grow: 1;
+			margin-right: 10px;
+		}
+		#signup-button {
+			margin-top: auto;
+			width: 80%;
+			margin-bottom: 70px;
+		}
+	</style>
 </head>
 <body>
     <!---
@@ -16,5 +90,30 @@
         비밀번호 설정 칸
         이렇게 만들어 주시면 될거 같습니다.
     -->
+    <div id="signup-container">
+		<img src="lock.png" alt="lock" width="50">
+		<h1>Sign up</h1>
+		<h2>Already have an account? <a href="#">Log in</a></h2>
+		<form>
+			<input type="text" placeholder="이름 입력 칸">
+			<div id="verification-container">
+				<input type="text" placeholder="이메일 입력 칸" style="height: 40px;">
+				<button onclick="sendEmail()" style="height: 46px;">인증하기</button>
+			</div>
+			<input type="text" placeholder="인증 코드 입력 칸">
+			<input type="text" placeholder="비밀번호 설정 칸">
+		</form>
+		<button id="signup-button" onclick="createAccount()">계정 생성</button>
+	</div>
+
+	<script>
+		function sendEmail() {
+			alert("이메일이 발송되었습니다.");
+		}
+
+		function createAccount() {
+			alert("계정이 생성되었습니다.");
+		}
+	</script>
 </body>
 </html>
