--- a/create.html
+++ b/create.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+    <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MyoungCar</title>
-</head>
-<body>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="create.css">
+        <title>MyoungCar</title>
+    </head>
+    <body>
     <!-- 
         카풀 게시글 작성 페이지 입니다.
         같이 올려지 create 예제 이미지를 보시고 그냥 바탕에 중간에 저런 형태의 박스가 위치해 있다고 생각하시면 됩니다.
@@ -16,5 +17,41 @@
         그리고 radiobox나 드롭다운 박스로 편하신대로 택시 혹은 카풀 두개를 선택할 수 있는 선택란과
         카풀을 선택하면 어느 지역 카풀인지 쓸 수 있는 텍스트 input을 만들어주시면 되겠습니다.
      -->
-</body>
+     <div class="container">
+        <div class="box">
+          <h1>카풀 게시글 작성하기</h1>
+          <form>
+          <label for="title">제목:</label>
+          <input type="text" id="title" name="title"><br>
+    
+          <label for="content">내용:</label>
+          <textarea id="content" name="content"></textarea><br>
+          <div>
+            <div id="set_people">
+              <label for="people">인원:</label>
+              <select id="people" name="people">
+                <option value="2">2명</option>
+                <option value="3">3명</option>
+                <option value="4">4명</option>
+              </select><br>
+            </div>
+            <div id = "set_ride" style="float: right; width: 45%;">
+              <label for="ride" >이용수단:</label>
+              <select id="ride" name="ride" >
+                <option value="taxi">택시</option>
+                <option value="carpool">카풀</option>
+              </select><br>
+              </div>
+            </div>
+            <div id="location-input" style="display: none; clear:both;">
+              <label for="location">지역:</label>
+              <input type="text" id="location" name="location" placeholder="카풀 선택 시 지역을 입력해주세요."><br>
+            </div>
+            <input type="submit" value="작성 완료">
+          </form>
+        </div>
+      </div>
+      <script type="text/javascript" src="create.js">
+        </script>
+    </body>
 </html>
